 - Deprecated the trace() method from Dispatcher.
 - Added an "identityCheck" property on LogService to turn on the IDENT identification 
   (RFC 1413). This would allow the default log format to display it.
 - Refactored com.noelios.restlet.LogFilter to make the default format follow more stricly
   the W3C Extended Log File Format with most of the default fields of Microsoft IIS 6.0.
  
[Enhancements] 
 - Added support for the IDENT protocol (see RFC 1413) in order to log more info about users.
   This is especially useful when a pool of computers shares the same IP address.
 - Updated Jetty to version 6.1 RC2.
 - Added a com.noelios.restlet.util.DefaultAccessLogFormatter adding a log format header.
 - Removed unecessary logic from org.restlet.Client.
 
1.0 beta 23 (2006-12-19)
[Bugs fixed]
 - Fixed several documentation typos. Reported by John D. Mitchell and Peter Murray.
 - Fixed issue with "sub-tagged" Language metadata (like "en-us"), sub-tag comparison must
   ignore the case. Reported by Jeff Walter and Andrew Barnes. Contributed by Thierry Boileau.
 - Fixed issues in parsing of "accept*" HTTP headers. Added unit tests. Reported by AJ Barnes and Jeff Walter.
 - Fixed potential NPE in HostScorer.
 - Fixed RDF media type from "application/rdf-xml" to "application/rdf+xml". Reported by Aldo Bucchi.
 - Made VirtualHost-based routing case-insensitive. Suggested by Thierry Boileau.
 - The Request class now ensures that a referrer reference don't include a fragment. Reported by Thierry Boileau.
 - Added list of variants references in the body of a 406 message. Reported by Thierry Boileau.
 
[API changes]
 - Added attachDefault(Restlet) method to Router class. The detach() method now also detaches the default scorer.
 - Deprecated the StringTemplate mechanism, replaced by a more seamless ReferenceTemplate approach,
   less intrusive. The following classes were deprecated and will be removed in the next