@@ -1,3 +1,3 @@
 #Build Number for ANT. Do not edit!
-#Fri Dec 22 12:26:33 CET 2006
-build.number=569
+#Fri Dec 22 15:52:39 CET 2006
+build.number=570
