@@ -137,8 +137,9 @@ public class WrapperResponse extends Response {
      * @see <a
      *      href="http://httpd.apache.org/docs/2.2/en/content-negotiation.html#algorithm">Apache
      *      content negotiation algorithm</a>
-     * @deprecated This code has been moved to the Handler.
+     * @deprecated The logic has been moved to the Handler class.
      */
+    @Deprecated
     public void setEntity(Resource resource) {
         getWrappedResponse().setEntity(resource);
     }
